# review-integrity-bot

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
adapters/: base.py  fixture.py  google_maps.py  serpapi_reviews.py
core/: config.py  cost.py  logging.py
data/: reviews.json
eval/: golden.json  run_eval.py
models/: review.py
services/: analyze.py  classify.py  errors.py  score.py  summarize.py
tests/: test_analyze.py  test_classify.py  test_score.py  test_serpapi.py  test_summarize.py  test_web.py
web/: app.py
web/templates/: index.html
